--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dairy Business</title>
+</head>
+<header>
+    <div>
+        <div>
+            <h1>Dairy Business</h1>
+        </div>
+        <div>
+            <nav>
+                <ul type="none">
+                    <a href=""><li>Home</li></a>
+                    <a href=""><li>About</li></a>
+                    <a href=""><li>Products</li></a>
+                    <a href=""><li>Contact Us</li></a>
+                    
+                </ul>
+            </nav>
+        </div>
+        <div>
+            <a href=""><button>Get started</button></a>
+        </div>
+    </div>
+</header>
+<body>
+
+    <footer>
+    <div>
+        <form action=""></form>
+        <form action=""></form>
+        <form action=""></form>
+        <form action=""></form>
+    </div>
+</footer>
+</body>
+</html>
