--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dairy Business</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <header>
     <div>
@@ -37,5 +38,6 @@
         <form action=""></form>
     </div>
 </footer>
+<script src="index.js" charset="UTF-8"></script>
 </body>
 </html>
