this commit adds the basic statement of the homepage.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     </header>
     <div class="homepage">
         <div div1>
-      
+            <h3>Radison is a dairy farm that was started by graduate engineers who could not find jobs <br>
+                We started the farm out of passion for production and milk was a good fit. <br> The farm has been helpful to the community by providing jobs
+            opportunities as well as affordable dairy products. <em>The farm believes in uplifling your neighbour and being kind to strangers.</em></h3>
         </div>
         <!-- HOMEPAGE:
     The farm name and who we are.
