This commit has the complete basic html elements without styling. The commit gives the basic structure that i will be working on

--- a/index.html
+++ b/index.html
@@ -33,67 +33,189 @@
         <div div1>
             <h3>Radison is a dairy farm that was started by graduate engineers who could not find jobs <br>
                 We started the farm out of passion for production and milk was a good fit. <br> The farm has been helpful to the community by providing jobs
-            opportunities as well as affordable dairy products. <em>The farm believes in uplifling your neighbour and being kind to strangers.</em></h3>
+            opportunities as well as affordable dairy products. <em>The farm believes in uplifling your neighbour and being kind to strangers. This value enables 
+                us to shine a light to other people knowing that tomorrow is not unpredictable.
+            </em></h3>
         </div>
-        <!-- HOMEPAGE:
-    The farm name and who we are.
-    Why do you farm?
-    How does your farming help your consumer?
-    What family values mean the most to you and why? -->
+        <div class="div2">
+            <img src="" alt="">
+        </div>
     </div>
-    <div>
-        <!-- ABOUT US PAGE:
-This page would address these questions:
-What's the name of the farm?
-• Why did you pick that name?
-• Where is it located?
-• What is/are your name/s?
-• How did you get into farming?
-• How long have you been farming?
-• Do you know the history of your farm and the land?
-Please make sure your family values are in the text. -->
+    <div class="ABOUT US PAGE">
+        <div class="div3">
+            <p>
+                we picked the name of this farm because we had a favourite hollywood character. <br>
+            </p>
+        </div>
+        <div class="div4">
+            <form action="">
+                <img src="" alt="">
+                <h3>Location</h3>
+            </form>
+            <form action="">
+                <img src="" alt="">
+                <h3>owner</h3>
+            </form>
+            <form action="">
+                <img src="" alt="">
+                <h3>Farming time</h3>
+            </form>
+            <img src="" alt="">
+            <form action="">history of the farm</form>
+            <!-- family values -->
+        </div>
     </div>
-    <div>
-        <!-- OUR COWS PAGE:
-What breed of cow is at your farm?
-How big is a dairy cow?
-How much milk do they produce?
-Where do they live?
-What excites you the most about them?
-This page could also include questions (along with your answers) that you get from consumers about the cows. -->
+    <div class="our cows page">
+        <div>
+            <h3>our cows page</h3>
+            <p>these are some of the breeds available in our farm. they all live in a burn where they are zero grazed. once in a while they live the burn to walk
+                around the farm. 
+            </p>
+        </div>
+        <div>
+            <div>
+                <img src="ayrshire.jpg" alt="">
+                <h3>Ayrshire</h3>
+                <p>They are known for vigorous and efficient milk production. <br>
+                    They can produce up to 50 litres of milk in a day. <br>
+                    The female one can weigh up to 600kgs and the male 900kgs.<br>
+                    The most exiting part about this breed is that they can maintain <br>
+                    health.
+                </p>
+            </div>
+            <div>
+                <img src="guernsey.jpg" alt="">
+                <h3>Guernsey</h3>
+                <p>
+                    Guernsey cows exist in between the jersey and the holstein breeds <br>
+                    They are known for producing quality milk. <br>
+                    They produce up to 20liters of milk in a day. <br>
+                    The cross breeded ones give up to 10liters. <br>
+                    The milk contain, high vitamins, proteins, calcium, cream. <br>
+                    All of them is adequate amounts. <br>
+                    Heifers weigh up to 600kgs and bulls 700kgs
+
+                </p>
+            </div>
+            <div>
+                <img src="holstein.jpg" alt="">
+                <h3>Holstein</h3>
+                <p>
+                    Holstein freshian cows are known for producing alot of milk. <br>
+                    They can produce up to 60liters per day. <br>
+                    The most exiting fact about them is that they grow and mature faster <br>
+                    the size of a heifer is usually 580kgs.
+                </p>
+            </div>
+        </div>
     </div>
-    <div>
-        <!-- OUR LAND PAGE:
-What crops are you growing?
-How are you growing those crops?
-How are the crops used at your farm?
-What do cows typically eat?
-How much food do they eat and how much is grown at your farm?
-How do you manage cow manure?
+    <div class="our land page">
+            <div>
+                <h3>Our animal feeds</h3>
+                <p>Our cattle, eat healthily. They always feed in a zero grazed environent and occational pastures</p>
+            </div>
+            <div>
+                <form action="">
+                    <img src="" alt="">
+                    <h3>Pasture</h3>
+                    <p>
+                        This is part of the farm where animals graze sometimes.
+                    </p>
+                </form>
+                <form action="">
+                    <img src="" alt="">
+                    <h3>commercial feeds</h3>
+                    <p>
+                        The cattles especially the
+                    </p>
+                </form>
+                <form action="">
+                    <img src="" alt="">
+                    <h3>Hay</h3>
+                    <p>They normally feed on hay on seasons that we cannot find green plants for them. </p>
+                </form>
+                <form action="">
+                    <img src="" alt="">
+                    <h3> Silage</h3>
+                    <p>This the food that they depend on mostly. <br>
+                    it is comprised of grass, sweet potatoes, bananas.</p>
+                </form>
+            </div>
+
+        <!-- 
 What is your sustainability story?
 How are you handling the manure from the cows?
 This page could also include questions (along with your answers) that you get from consumers about the land. -->
     </div>
-    <div>
-        <!-- OUR PRODUCTS PAGE:
-How much milk do your cows produce?
+    <div class="OUR PRODUCTS PAGE">
+        <div>
+            <h3>OUR PRODUCTS PAGE</h3>
+            <p>There are some products that are produced in the farm. <br> the list below is some of them</p>
+        </div>
+        <div>
+            <form action="">
+                <img src="" alt="">
+                <h3>Milk</h3>
+                <p>Milk is the primary product from our farms. <br>it is produced in large quatities of about 3000liters per day.</p>
+            </form>
+            <form action="">
+                <img src="" alt="">
+                <h3>Cheese</h3>
+                <p>We produce cheese but in low quantities. <br> it is mostly for domestic purpose and friends who stop by. <br></p>
+            </form>
+            <form action="">
+                <img src="" alt="">
+                <h3>
+                    Mursik
+                </h3>
+                <p>It is also done for consumption only, nothing commercial. <br> We believe our mursik is one of the best qualities around.</p>
+            </form>
+            <form action="">
+                <img src="" alt="">
+                <h3>Cows</h3>
+                <p>we also sell our cows occasionally. <br>
+                whoever wishes to stop by and by some breeds we are available.</p>
+            </form>
+        </div>
+        <div class="safety">
+            <div>
+                <img src="" alt="">
+            </div>
+            <div>
+                <h3>
+                    Our products are safe
+                </h3>
+                <p>the animals andergo regular checkups by professionals. <br>
+                    the picture on the left shows one of the events where the <br>
+                    cow was being examined by a vet.
+                </p>
+            </div>
+        </div>
+<!-- How much milk do your cows produce?
 Where does that milk go?
 How can consumers be assured their milk is safe?
-What steps do you do at the farm to assure its safety?
-When will milk from your farm be at the store?
-What excites you the most about the milk you produce every day?
-Again, this page could include questions (along with your answers) that you get from consumers about your products. -->
+What steps do you do at the farm to assure its safety? -->
+
     </div>
-    <div>
-        <!-- DAIRY FARM TOUR PAGE:
-I would encourage you to produce text or videos about each one of these different sections on the farm:
-• Home/Business area/Family life
-• Calving area
-• Barn/Housing
-• Cow Feed
-• Milking Parlor
-• Maternity/Hospital Barn
-• Employees -->
+    <div class="FARM TOUR">
+        <div>
+            <h3>Farm Tour</h3>
+            <h3>These are some of the facilities in the land. <br>they enable us give our animals the best care.</h3>
+        </div>
+        <div>
+            <div>
+                <h3> cow feed</h3>
+                <img src="" alt="">
+            </div>
+            <div>
+                <h3>Milking palor</h3>
+                <img src="" alt="">
+            </div>
+            <div>
+                <h3>housing</h3>
+                <img src="" alt="">
+            </div>
+        </div>
     </div>
     <div>
         <!-- CONTACT US PAGE:
@@ -104,10 +226,33 @@ I would encourage you to produce text or videos about each one of these differen
     </div>
     <footer>
         <div>
-            <form action=""></form>
-            <form action=""></form>
-            <form action=""></form>
-            <form action=""></form>
+            <form action="">
+                <h1>Name</h1>
+                <p>email address</p>
+                <p>phone number</p>
+                <p>social media</p>
+            </form>
+            <form action="">
+                <h3>Farm</h3>
+                <p>About us</p>
+                <p>Contact us</p>
+                <p>Products</p>
+            </form>
+            <form action="">
+                <h3>About</h3>
+                <p>milk</p>
+                <p>Cows</p>
+                <p>cheese</p>
+                <p>Mursik</p>
+            </form>
+            <form action="">
+                <h3>
+                    Others
+                </h3>
+                <p>FAQs</p>
+                <p>Employes</p>
+                <p>Terms of our services</p>
+            </form>
         </div>
     </footer>
 <script src="index.js" charset="UTF-8"></script>
