--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 </head>
 <body>
     <header>
-        <div>
+        <div class="heading">
             <div>
                 <h1>Dairy Business</h1>
             </div>
             <div>
                 <nav>
                     <ul type="none">
-                        <a href=""><li>Home</li></a>
-                        <a href=""><li>About</li></a>
-                        <a href=""><li>Products</li></a>
+                        <a href=""><li>Home</li></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a href=""><li>About</li></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a href=""><li>Products</li></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         <a href=""><li>Contact Us</li></a>
                         
                     </ul>
@@ -223,6 +223,11 @@ What steps do you do at the farm to assure its safety? -->
     Phone
     Email
     Social Media Connections -->
+    </div>
+    <div class="data">
+        <form action="produce"></form>
+        <form action="sales"></form>
+
     </div>
     <footer>
         <div>
