This commit makes the basic layout of the first division.

--- a/index.html
+++ b/index.html
@@ -30,16 +30,18 @@
         </div>
     </header>
     <div class="homepage">
-        <div div1>
-            <h3>Radison is a dairy farm that was started by graduate engineers who could not find jobs <br>
-                We started the farm out of passion for production and milk was a good fit. <br> The farm has been helpful to the community by providing jobs
-            opportunities as well as affordable dairy products. <em>The farm believes in uplifling your neighbour and being kind to strangers. This value enables 
-                us to shine a light to other people knowing that tomorrow is not unpredictable.
-            </em></h3>
+        <div class="div1">
+            <h2>
+                Find quality milk for processing
+                and for domestic consumption.
+            </h2>
+            <p>This are quality products that encourage healthy living from a click of a button. <br> The products
+            are from well maintained cattles that are healthy.</p>
+            <button>Order</button>
         </div>
-        <div class="div2">
-            <img src="" alt="">
-        </div>
+
+            <img src="dairy.jpg" alt="" width="50%" class="div2">
+
     </div>
     <div class="ABOUT US PAGE">
         <div class="div3">
