This commit finalises first division layout. This division makes it easy to acquire information about the website.

--- a/index.html
+++ b/index.html
@@ -31,13 +31,14 @@
     </header>
     <div class="homepage">
         <div class="div1">
-            <h2>
-                Find quality milk for processing
-                and for domestic consumption.
+            <h2 class="home">
+                Find quality milk for<br> processing 
+                and for <br> domestic  consumption.
             </h2>
-            <p>This are quality products that encourage healthy living from a click of a button. <br> The products
-            are from well maintained cattles that are healthy.</p>
-            <button>Order</button>
+            <p id="home">This are quality products that encourage healthy<br> living from a click of a button. The products
+            are from well<br> maintained cattles that are healthy.</p>
+            <a href=""><button class="page">Order</button></a>
+            
         </div>
 
             <img src="dairy.jpg" alt="" width="50%" class="div2">
