this commit lays the layout of the second division.

--- a/index.html
+++ b/index.html
@@ -37,19 +37,21 @@
             </h2>
             <p id="home">This are quality products that encourage healthy<br> living from a click of a button. The products
             are from well<br> maintained cattles that are healthy.</p>
-            <a href=""><button class="page">Order</button></a>
+            <a href=""><button class="pag">Order</button></a>
             
         </div>
 
             <img src="dairy.jpg" alt="" width="50%" class="div2">
 
     </div>
+    <div class="div3">
+        <h1>
+            we picked the name of this farm because we had a favourite hollywood character. <br>
+        </h1>
+    </div>
     <div class="ABOUT US PAGE">
-        <div class="div3">
-            <p>
-                we picked the name of this farm because we had a favourite hollywood character. <br>
-            </p>
-        </div>
+        <img src="download.jpeg" alt="" width="40%" height="40%" class="about">
+
         <div class="div4">
             <form action="">
                 <img src="" alt="">
@@ -70,14 +72,14 @@
     </div>
     <div class="our cows page">
         <div>
-            <h3>our cows page</h3>
+            <h1>our cows page</h1>
             <p>these are some of the breeds available in our farm. they all live in a burn where they are zero grazed. once in a while they live the burn to walk
                 around the farm. 
             </p>
         </div>
-        <div>
-            <div>
-                <img src="ayrshire.jpg" alt="">
+        <div class="form1">
+            <form width="25%">
+                <img src="ayrshire.jpg" alt="" width="70%">
                 <h3>Ayrshire</h3>
                 <p>They are known for vigorous and efficient milk production. <br>
                     They can produce up to 50 litres of milk in a day. <br>
@@ -85,9 +87,9 @@
                     The most exiting part about this breed is that they can maintain <br>
                     health.
                 </p>
-            </div>
-            <div>
-                <img src="guernsey.jpg" alt="">
+            </form>
+            <form width="25%">
+                <img src="guernsey.jpg" alt="" width="70%">
                 <h3>Guernsey</h3>
                 <p>
                     Guernsey cows exist in between the jersey and the holstein breeds <br>
@@ -99,9 +101,9 @@
                     Heifers weigh up to 600kgs and bulls 700kgs
 
                 </p>
-            </div>
-            <div>
-                <img src="holstein.jpg" alt="">
+            </form>
+            <form width="25%">
+                <img src="holstein.jpg" alt="" width="70%">
                 <h3>Holstein</h3>
                 <p>
                     Holstein freshian cows are known for producing alot of milk. <br>
@@ -109,7 +111,7 @@
                     The most exiting fact about them is that they grow and mature faster <br>
                     the size of a heifer is usually 580kgs.
                 </p>
-            </div>
+            </form>
         </div>
     </div>
     <div class="our land page">
@@ -126,8 +128,8 @@
                     </p>
                 </form>
                 <form action="">
-                    <img src="" alt="">
-                    <h3>commercial feeds</h3>
+                    <img src="commercial.jpg." alt="">
+                    <h3>Commercial feeds</h3>
                     <p>
                         The cattles especially the
                     </p>
