--- a/index.html
+++ b/index.html
@@ -119,33 +119,27 @@
                 <h3>Our animal feeds</h3>
                 <p>Our cattle, eat healthily. They always feed in a zero grazed environent and occational pastures</p>
             </div>
-            <div>
+            <div class="feeds">
                 <form action="">
-                    <img src="" alt="">
+                    <img src="pasture.jpg" alt="" width="80%">
                     <h3>Pasture</h3>
                     <p>
                         This is part of the farm where animals graze sometimes.
                     </p>
                 </form>
                 <form action="">
-                    <img src="commercial.jpg." alt="">
-                    <h3>Commercial feeds</h3>
-                    <p>
-                        The cattles especially the
-                    </p>
-                </form>
-                <form action="">
-                    <img src="" alt="">
+                    <img src="hay.jpeg" alt="" width="80%">
                     <h3>Hay</h3>
                     <p>They normally feed on hay on seasons that we cannot find green plants for them. </p>
                 </form>
                 <form action="">
-                    <img src="" alt="">
+                    <img src="silage.jpg" alt="" width="80%">
                     <h3> Silage</h3>
                     <p>This the food that they depend on mostly. <br>
                     it is comprised of grass, sweet potatoes, bananas.</p>
                 </form>
             </div>
+
 
         <!-- 
 What is your sustainability story?
@@ -157,26 +151,26 @@ This page could also include questions (along with your answers) that you get fr
             <h3>OUR PRODUCTS PAGE</h3>
             <p>There are some products that are produced in the farm. <br> the list below is some of them</p>
         </div>
-        <div>
+        <div class="form2">
             <form action="">
-                <img src="" alt="">
+                <img src="milk.jpg" alt="" width="20%">
                 <h3>Milk</h3>
                 <p>Milk is the primary product from our farms. <br>it is produced in large quatities of about 3000liters per day.</p>
             </form>
             <form action="">
-                <img src="" alt="">
+                <img src="cheese.jpeg" alt="" width="20%">
                 <h3>Cheese</h3>
                 <p>We produce cheese but in low quantities. <br> it is mostly for domestic purpose and friends who stop by. <br></p>
             </form>
-            <form action="">
-                <img src="" alt="">
+            <form action="mursik.jpg">
+                <img src="mursik.jpg" alt="" width="20%">
                 <h3>
                     Mursik
                 </h3>
                 <p>It is also done for consumption only, nothing commercial. <br> We believe our mursik is one of the best qualities around.</p>
             </form>
             <form action="">
-                <img src="" alt="">
+                <img src="pasture.jpg" alt="" width="20%">
                 <h3>Cows</h3>
                 <p>we also sell our cows occasionally. <br>
                 whoever wishes to stop by and by some breeds we are available.</p>
@@ -207,18 +201,23 @@ What steps do you do at the farm to assure its safety? -->
             <h3>Farm Tour</h3>
             <h3>These are some of the facilities in the land. <br>they enable us give our animals the best care.</h3>
         </div>
-        <div>
+        <div class="community">
             <div>
+                <img src="grazing.jpg" alt="">
                 <h3> cow feed</h3>
-                <img src="" alt="">
+                
             </div>
             <div>
+                <img src="milking palor.jpg" alt="">
                 <h3>Milking palor</h3>
-                <img src="" alt="">
             </div>
             <div>
+                <img src="housing.jpg" alt="">
                 <h3>housing</h3>
-                <img src="" alt="">
+            </div>
+            <div>
+                <img src="community.png" alt="">
+                <h3>Community</h3>
             </div>
         </div>
     </div>
