--- a/index.html
+++ b/index.html
@@ -203,20 +203,20 @@ What steps do you do at the farm to assure its safety? -->
         </div>
         <div class="community">
             <div>
-                <img src="grazing.jpg" alt="">
+                <img src="grazing.jpg" alt="" width="20%">
                 <h3> cow feed</h3>
                 
             </div>
             <div>
-                <img src="milking palor.jpg" alt="">
+                <img src="milking palor.jpg" alt="" width="20%">
                 <h3>Milking palor</h3>
             </div>
             <div>
-                <img src="housing.jpg" alt="">
+                <img src="housing.jpg" alt="" width="20%">
                 <h3>housing</h3>
             </div>
             <div>
-                <img src="community.png" alt="">
+                <img src="community.png" alt="" width="20%">
                 <h3>Community</h3>
             </div>
         </div>
@@ -234,12 +234,13 @@ What steps do you do at the farm to assure its safety? -->
 
     </div>
     <footer>
-        <div>
+        <div class="footer">
             <form action="">
                 <h1>Name</h1>
                 <p>email address</p>
                 <p>phone number</p>
                 <p>social media</p>
+                <p>Location</p>
             </form>
             <form action="">
                 <h3>Farm</h3>
