This commit removes a part of the division from the page so as to make the page less bulky.

--- a/index.html
+++ b/index.html
@@ -146,81 +146,30 @@ What is your sustainability story?
 How are you handling the manure from the cows?
 This page could also include questions (along with your answers) that you get from consumers about the land. -->
     </div>
-    <div class="OUR PRODUCTS PAGE">
-        <div>
-            <h3>OUR PRODUCTS PAGE</h3>
-            <p>There are some products that are produced in the farm. <br> the list below is some of them</p>
-        </div>
-        <div class="form2">
-            <form action="">
-                <img src="milk.jpg" alt="" width="20%">
-                <h3>Milk</h3>
-                <p>Milk is the primary product from our farms. <br>it is produced in large quatities of about 3000liters per day.</p>
-            </form>
-            <form action="">
-                <img src="cheese.jpeg" alt="" width="20%">
-                <h3>Cheese</h3>
-                <p>We produce cheese but in low quantities. <br> it is mostly for domestic purpose and friends who stop by. <br></p>
-            </form>
-            <form action="mursik.jpg">
-                <img src="mursik.jpg" alt="" width="20%">
-                <h3>
-                    Mursik
-                </h3>
-                <p>It is also done for consumption only, nothing commercial. <br> We believe our mursik is one of the best qualities around.</p>
-            </form>
-            <form action="">
-                <img src="pasture.jpg" alt="" width="20%">
-                <h3>Cows</h3>
-                <p>we also sell our cows occasionally. <br>
-                whoever wishes to stop by and by some breeds we are available.</p>
-            </form>
-        </div>
-        <div class="safety">
-            <div>
-                <img src="" alt="">
-            </div>
-            <div>
-                <h3>
-                    Our products are safe
-                </h3>
-                <p>the animals andergo regular checkups by professionals. <br>
-                    the picture on the left shows one of the events where the <br>
-                    cow was being examined by a vet.
-                </p>
-            </div>
-        </div>
-<!-- How much milk do your cows produce?
-Where does that milk go?
-How can consumers be assured their milk is safe?
-What steps do you do at the farm to assure its safety? -->
-
-    </div>
-    <div class="FARM TOUR">
+    
         <div>
             <h3>Farm Tour</h3>
             <h3>These are some of the facilities in the land. <br>they enable us give our animals the best care.</h3>
         </div>
         <div class="community">
             <div>
-                <img src="grazing.jpg" alt="" width="20%">
+                <img src="grazing.jpg" alt="" class="images">
                 <h3> cow feed</h3>
                 
             </div>
             <div>
-                <img src="milking palor.jpg" alt="" width="20%">
+                <img src="milking palor.jpg" alt="" class="images">
                 <h3>Milking palor</h3>
             </div>
             <div>
-                <img src="housing.jpg" alt="" width="20%">
+                <img src="housing.jpg" alt="" class="images">
                 <h3>housing</h3>
             </div>
             <div>
-                <img src="community.png" alt="" width="20%">
+                <img src="community.png" alt="" class="images">
                 <h3>Community</h3>
             </div>
         </div>
-    </div>
     <div>
         <!-- CONTACT US PAGE:
     Address
