This commit adjusts the position of the second div using position relative and place it in on left side of the page.

--- a/index.html
+++ b/index.html
@@ -44,42 +44,13 @@
             <img src="dairy.jpg" alt="" width="50%" class="div2">
 
     </div>
-    <div class="div3">
-        <h1>
-            we picked the name of this farm because we had a favourite hollywood character. <br>
-        </h1>
-    </div>
-    <div class="ABOUT US PAGE">
-        <img src="download.jpeg" alt="" width="40%" height="40%" class="about">
-
-        <div class="div4">
-            <form action="">
-                <img src="" alt="">
-                <h3>Location</h3>
-            </form>
-            <form action="">
-                <img src="" alt="">
-                <h3>owner</h3>
-            </form>
-            <form action="">
-                <img src="" alt="">
-                <h3>Farming time</h3>
-            </form>
-            <img src="" alt="">
-            <form action="">history of the farm</form>
-            <!-- family values -->
-        </div>
-    </div>
     <div class="our cows page">
         <div>
-            <h1>our cows page</h1>
-            <p>these are some of the breeds available in our farm. they all live in a burn where they are zero grazed. once in a while they live the burn to walk
-                around the farm. 
-            </p>
+            <center><h1 class="breed">Breeds</h1></center>
         </div>
         <div class="form1">
-            <form width="25%">
-                <img src="ayrshire.jpg" alt="" width="70%">
+            <form id="form1">
+                <img src="ayrshire.jpg" alt="" class="silage">
                 <h3>Ayrshire</h3>
                 <p>They are known for vigorous and efficient milk production. <br>
                     They can produce up to 50 litres of milk in a day. <br>
@@ -88,8 +59,8 @@
                     health.
                 </p>
             </form>
-            <form width="25%">
-                <img src="guernsey.jpg" alt="" width="70%">
+            <form id="form1" class="form">
+                <img src="guernsey.jpg" alt="" class="silage">
                 <h3>Guernsey</h3>
                 <p>
                     Guernsey cows exist in between the jersey and the holstein breeds <br>
@@ -102,8 +73,8 @@
 
                 </p>
             </form>
-            <form width="25%">
-                <img src="holstein.jpg" alt="" width="70%">
+            <form id="form1">
+                <img src="holstein.jpg" alt="" class="silage">
                 <h3>Holstein</h3>
                 <p>
                     Holstein freshian cows are known for producing alot of milk. <br>
@@ -121,19 +92,19 @@
             </div>
             <div class="feeds">
                 <form action="">
-                    <img src="pasture.jpg" alt="" width="80%">
+                    <img src="pasture.jpg" alt="" class="silage">
                     <h3>Pasture</h3>
                     <p>
                         This is part of the farm where animals graze sometimes.
                     </p>
                 </form>
                 <form action="">
-                    <img src="hay.jpeg" alt="" width="80%">
+                    <img src="hay.jpeg" alt="" class="silage">
                     <h3>Hay</h3>
                     <p>They normally feed on hay on seasons that we cannot find green plants for them. </p>
                 </form>
                 <form action="">
-                    <img src="silage.jpg" alt="" width="80%">
+                    <img src="silage.jpg" alt="" class="silage">
                     <h3> Silage</h3>
                     <p>This the food that they depend on mostly. <br>
                     it is comprised of grass, sweet potatoes, bananas.</p>
@@ -182,6 +153,21 @@ This page could also include questions (along with your answers) that you get fr
         <form action="sales"></form>
 
     </div>
+    <table>
+        <tr>
+            <td>
+                <form action="">
+
+            </form>
+            </td>
+            <td>
+                <form action="">
+                    
+                </form>
+            </td>
+        </tr>
+
+    </table>
     <footer>
         <div class="footer">
             <form action="">
