this commit create space between elements. this make the page easy to understand and decent.

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
     </div>
     <div class="our land page">
             <div>
-                <h3>Our animal feeds</h3>
-                <p>Our cattle, eat healthily. They always feed in a zero grazed environent and occational pastures</p>
+                <center><h3>Our animal feeds</h3>
+                    <p>Our cattle, eat healthily. They always feed in a zero grazed environent and occational pastures</p></center>
             </div>
             <div class="feeds">
                 <form action="">
@@ -118,9 +118,9 @@ How are you handling the manure from the cows?
 This page could also include questions (along with your answers) that you get from consumers about the land. -->
     </div>
     
-        <div>
-            <h3>Farm Tour</h3>
-            <h3>These are some of the facilities in the land. <br>they enable us give our animals the best care.</h3>
+        <div class="div7">
+            <center><h3>Farm Tour</h3>
+                <h3>These are some of the facilities in the land. <br>they enable us give our animals the best care.</h3></center>
         </div>
         <div class="community">
             <div>
