This commit introduces input functions for entering data from the farm.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="heading">
             <div>
-                <h1>Dairy Business</h1>
+                <h1 id="title">Dairy Business</h1>
             </div>
             <div>
                 <nav>
@@ -168,10 +168,24 @@ This page could also include questions (along with your answers) that you get fr
         </tr>
 
     </table>
+    <div id="inputs">
+        <form action="">
+            <label for="tentacles">Number of tentacles (10-100):</label>
+
+            <input type="number" id="tentacles" name="tentacles"
+            min="10" max="100">
+        </form>
+        <form action="">
+            <label for="tentacles">Number of tentacles (10-100):</label>
+
+            <input type="number" id="tentacles" name="tentacles"
+            min="10" max="100">
+        </form>
+    </div>
     <footer>
         <div class="footer">
             <form action="">
-                <h1>Name</h1>
+                <h1 id="foot">Name</h1>
                 <p>email address</p>
                 <p>phone number</p>
                 <p>social media</p>
