This commit adds the input of the daily outputs to the page. The inputs can take data and give an output.

--- a/index.html
+++ b/index.html
@@ -168,19 +168,16 @@ This page could also include questions (along with your answers) that you get fr
         </tr>
 
     </table>
-    <div id="inputs">
-        <form action="">
-            <label for="tentacles">Number of tentacles (10-100):</label>
 
-            <input type="number" id="tentacles" name="tentacles"
-            min="10" max="100">
-        </form>
-        <form action="">
-            <label for="tentacles">Number of tentacles (10-100):</label>
+        <div id="inputs">
+            shed1 : <input onblur="findTotal()" type="text" name="shed" id="shed1"/><br>
+            shed2 : <input onblur="findTotal()" type="text" name="shed" id="shed2"/><br>
+            shed3 : <input onblur="findTotal()" type="text" name="shed" id="shed3"/><br>
+            shed4 : <input onblur="findTotal()" type="text" name="shed" id="shed4"/><br>
+            shed5 : <input onblur="findTotal()" type="text" name="shed" id="shed5"/><br>
+    <br><br>
+    Total : <input type="text" name="total" id="total"/>
 
-            <input type="number" id="tentacles" name="tentacles"
-            min="10" max="100">
-        </form>
     </div>
     <footer>
         <div class="footer">
