--- a/index.html
+++ b/index.html
@@ -170,14 +170,21 @@ This page could also include questions (along with your answers) that you get fr
     </table>
 
         <div id="inputs">
-            shed1 : <input onblur="findTotal()" type="text" name="shed" id="shed1"/><br>
-            shed2 : <input onblur="findTotal()" type="text" name="shed" id="shed2"/><br>
-            shed3 : <input onblur="findTotal()" type="text" name="shed" id="shed3"/><br>
-            shed4 : <input onblur="findTotal()" type="text" name="shed" id="shed4"/><br>
-            shed5 : <input onblur="findTotal()" type="text" name="shed" id="shed5"/><br>
+            shed1 : <input onblur="findTotal()" type="number" name="shed" id="shed1"/><br>
+            shed2 : <input onblur="findTotal()" type="number" name="shed" id="shed2"/><br>
+            shed3 : <input onblur="findTotal()" type="number" name="shed" id="shed3"/><br>
+            shed4 : <input onblur="findTotal()" type="number" name="shed" id="shed4"/><br>
+            shed5 : <input onblur="findTotal()" type="number" name="shed" id="shed5"/><br>
     <br><br>
-    Total : <input type="text" name="total" id="total"/>
 
+    </div>
+    <div class="totalamount">
+        Total : <input type="number" name="total" id="total"/>
+    </div>
+    <div class="lastearn">
+        <input type="number" name="weekly" id="weekly">
+        <input type="number" name="monthly" id="monthy">
+        <input type="number" name="year" id="year">
     </div>
     <footer>
         <div class="footer">
