this commit adds the input functions in the html page. The inputs are not yet automated

--- a/index.html
+++ b/index.html
@@ -182,9 +182,22 @@ This page could also include questions (along with your answers) that you get fr
         Total : <input type="number" name="total" id="total"/>
     </div>
     <div class="lastearn">
-        <input type="number" name="weekly" id="weekly">
-        <input type="number" name="monthly" id="monthy">
-        <input type="number" name="year" id="year">
+        weeklyoutput<input type="number" name="weekly" id="weekly"><br><br>
+        yearoutput<input type="number" name="year" id="year">
+    </div>
+    <div class="monthly">
+        January<input type="number" name="monthly" id="monthy">
+        February<input type="number" name="monthly" id="monthy">
+        March<input type="number" name="monthly" id="monthy">
+        April<input type="number" name="monthly" id="monthy">
+        May<input type="number" name="monthly" id="monthy">
+        June<input type="number" name="monthly" id="monthy"><br><br>
+        July<input type="number" name="monthly" id="monthy">
+        August<input type="number" name="monthly" id="monthy">
+        September<input type="number" name="monthly" id="monthy">
+        October<input type="number" name="monthly" id="monthy">
+        November<input type="number" name="monthly" id="monthy">
+        December<input type="number" name="monthly" id="monthy">
     </div>
     <footer>
         <div class="footer">
