this commit adjusts the sizes and display of the inputs making them more responsive.

--- a/index.html
+++ b/index.html
@@ -170,34 +170,34 @@ This page could also include questions (along with your answers) that you get fr
     </table>
 
         <div id="inputs">
-            shed1 : <input onblur="findTotal()" type="number" name="shed" id="shed1"/><br>
-            shed2 : <input onblur="findTotal()" type="number" name="shed" id="shed2"/><br>
-            shed3 : <input onblur="findTotal()" type="number" name="shed" id="shed3"/><br>
-            shed4 : <input onblur="findTotal()" type="number" name="shed" id="shed4"/><br>
-            shed5 : <input onblur="findTotal()" type="number" name="shed" id="shed5"/><br>
+            shed1 : <input onblur="findTotal()" type="number" class="shed" name="shed" id="shed1"/><br>
+            shed2 : <input onblur="findTotal()" type="number" class="shed" name="shed" id="shed2"/><br>
+            shed3 : <input onblur="findTotal()" type="number" class="shed" name="shed" id="shed3"/><br>
+            shed4 : <input onblur="findTotal()" type="number" class="shed" name="shed" id="shed4"/><br>
+            shed5 : <input onblur="findTotal()" type="number" class="shed" name="shed" id="shed5"/><br>
     <br><br>
 
     </div>
     <div class="totalamount">
-        Total : <input type="number" name="total" id="total"/>
+        Total : <input type="number" class="shed"  name="total" id="total"/>
     </div>
     <div class="lastearn">
-        weeklyoutput<input type="number" name="weekly" id="weekly"><br><br>
-        yearoutput<input type="number" name="year" id="year">
+        weeklyoutput<input type="number" class="shed" name="weekly" id="weekly"><br><br>
+        yearoutput<input type="number" class="shed" name="year" id="year">
     </div>
     <div class="monthly">
-        January<input type="number" name="monthly" id="monthy">
-        February<input type="number" name="monthly" id="monthy">
-        March<input type="number" name="monthly" id="monthy">
-        April<input type="number" name="monthly" id="monthy">
-        May<input type="number" name="monthly" id="monthy">
-        June<input type="number" name="monthly" id="monthy"><br><br>
-        July<input type="number" name="monthly" id="monthy">
-        August<input type="number" name="monthly" id="monthy">
-        September<input type="number" name="monthly" id="monthy">
-        October<input type="number" name="monthly" id="monthy">
-        November<input type="number" name="monthly" id="monthy">
-        December<input type="number" name="monthly" id="monthy">
+        January<input type="number" class="shed" name="monthly" id="monthy">
+        February<input type="number" class="shed" name="monthly" id="monthy">
+        March<input type="number" class="shed" name="monthly" id="monthy">
+        April<input type="number" class="shed" name="monthly" id="monthy">
+        May<input type="number" class="shed" name="monthly" id="monthy">
+        June<input type="number" class="shed" name="monthly" id="monthy">
+        July<input type="number" class="shed" name="monthly" id="monthy">
+        August<input type="number" class="shed" name="monthly" id="monthy">
+        September<input type="number" class="shed" name="monthly" id="monthy">
+        October<input type="number" class="shed" name="monthly" id="monthy">
+        November<input type="number" class="shed" name="monthly" id="monthy">
+        December<input type="number" class="shed" name="monthly" id="monthy">
     </div>
     <footer>
         <div class="footer">
