this commit adds th input values to the months and the yearly and the weekly outputs.

--- a/index.html
+++ b/index.html
@@ -183,21 +183,21 @@ This page could also include questions (along with your answers) that you get fr
     </div>
     <div class="lastearn">
         weeklyoutput<input type="number" class="shed" name="weekly" id="weekly"><br><br>
-        yearoutput<input type="number" class="shed" name="year" id="year">
+        yearoutput<input type="number" class="shed" name="year" id="yearly">
     </div>
     <div class="monthly">
-        January<input type="number" class="shed" name="monthly" id="monthy">
-        February<input type="number" class="shed" name="monthly" id="monthy">
-        March<input type="number" class="shed" name="monthly" id="monthy">
-        April<input type="number" class="shed" name="monthly" id="monthy">
-        May<input type="number" class="shed" name="monthly" id="monthy">
-        June<input type="number" class="shed" name="monthly" id="monthy">
-        July<input type="number" class="shed" name="monthly" id="monthy">
-        August<input type="number" class="shed" name="monthly" id="monthy">
-        September<input type="number" class="shed" name="monthly" id="monthy">
-        October<input type="number" class="shed" name="monthly" id="monthy">
-        November<input type="number" class="shed" name="monthly" id="monthy">
-        December<input type="number" class="shed" name="monthly" id="monthy">
+        January<input type="number" class="shed month" name="jan" id="jan">
+        February<input type="number" class="shed month" name="feb" id="feb">
+        March<input type="number" class="shed month" name="jan" id="march">
+        April<input type="number" class="shed month" name="april" id="april">
+        May<input type="number" class="shed month" name="jan" id="may">
+        June<input type="number" class="shed month" name="april" id="june">
+        July<input type="number" class="shed month" name="jan" id="july">
+        August<input type="number" class="shed month" name="jan" id="aug">
+        September<input type="number" class="shed month" name="april" id="sept">
+        October<input type="number" class="shed month" name="jan" id="oct">
+        November<input type="number" class="shed month" name="april" id="nov">
+        December<input type="number" class="shed month" name="jan" id="dec">
     </div>
     <footer>
         <div class="footer">
