--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
     
    
    <form action="">
-    <label>shed1</label><input type="number" class="shed">
-    <label>shed2</label><input type="number" class="shed">
-    <label>shed3</label><input type="number" class="shed">
-    <label>shed4</label><input type="number" class="shed">
-    <label>shed5</label><input type="number" class="shed">
+    <label>shed1</label><input type="number" class="shed"><br/>
+    <label>shed2</label><input type="number" class="shed"><br/>
+    <label>shed3</label><input type="number" class="shed"><br/>
+    <label>shed4</label><input type="number" class="shed"><br/>
+    <label>shed5</label><input type="number" class="shed"><br/>
    </form>
    <div>
     <hr/>
-    <div>
+    <div class="outputs">
         <div class="months"> <h2 class="h2">January: </h2> <span class="jan">January</span></div>
         <div class="months"> <h2 class="h2">February: </h2> <span class="feb">February</span></div>
         <div class="months"> <h2 class="h2">March: </h2> <span class="jan">March</span></div>
@@ -63,9 +63,9 @@
     </div>
 
     <div>
-        <h2>Total</h2><span class="total">total</span>
-        <h2>weekly output: </h2> <span class="week">week</span>
-        <h2>yearly output</h2> <span class="year">year</span>
+        <h2 class="h2">Total</h2><span class="total">total</span>
+        <h2 class="h2">weekly output: </h2> <span class="week">week</span>
+        <h2 class="h2">yearly output</h2> <span class="year">year</span>
     </div>
    </div>
 <script src="index.js" charset="UTF-8"></script>
