--- a/index.html
+++ b/index.html
@@ -39,34 +39,38 @@
     
    
    <form action="">
-    <label>shed1</label><input type="number" class="shed"><br/>
-    <label>shed2</label><input type="number" class="shed"><br/>
-    <label>shed3</label><input type="number" class="shed"><br/>
-    <label>shed4</label><input type="number" class="shed"><br/>
+    <label>shed1</label><input type="number" class="shed"><br/><br/><br/>
+    <label>shed2</label><input type="number" class="shed"><br/><br/><br/>
+    <label>shed3</label><input type="number" class="shed"><br/><br/><br/>
+    <label>shed4</label><input type="number" class="shed"><br/><br/><br/>
     <label>shed5</label><input type="number" class="shed"><br/>
    </form>
    <div>
     <hr/>
     <div class="outputs">
-        <div class="months"> <h2 class="h2">January: </h2> <span class="jan">January</span></div>
-        <div class="months"> <h2 class="h2">February: </h2> <span class="feb">February</span></div>
-        <div class="months"> <h2 class="h2">March: </h2> <span class="jan">March</span></div>
-        <div class="months"><h2 class="h2">April: </h2> <span class="ap">April</span></div>
-       <div class="months"> <h2 class="h2">May: </h2> <span class="jan">May</span></div>
-       <div class="months"><h2 class="h2">June: </h2> <span class="ap">June</span></div>
-       <div class="months"><h2 class="h2">July: </h2> <span class="jan">July</span></div>
-        <div class="months"><h2 class="h2">August: </h2> <span class="jan">August</span></div>
-        <div class="months"><h2 class="h2">September: </h2> <span class="ap">September</span></div>
-        <div class="months"> <h2 class="h2">October: </h2> <span class="jan">October</span></div>
-        <div class="months"><h2 class="h2">November: </h2> <span class="ap">November</span></div>
-       <div class="months"><h2 class="h2">December: </h2> <span class="jan">December</span></div>
+        <div >
+            <div class="months"> <h2 class="h2">January: </h2> <span class="jan">January</span></div>
+            <div class="months"> <h2 class="h2">February: </h2> <span class="feb">February</span></div>
+            <div class="months"> <h2 class="h2">March: </h2> <span class="jan">March</span></div>
+            <div class="months"><h2 class="h2">April: </h2> <span class="ap">April</span></div>
+           <div class="months"> <h2 class="h2">May: </h2> <span class="jan">May</span></div>
+           <div class="months"><h2 class="h2">June: </h2> <span class="ap">June</span></div>
+           <div class="months"><h2 class="h2">July: </h2> <span class="jan">July</span></div>
+            <div class="months"><h2 class="h2">August: </h2> <span class="jan">August</span></div>
+            <div class="months"><h2 class="h2">September: </h2> <span class="ap">September</span></div>
+            <div class="months"> <h2 class="h2">October: </h2> <span class="jan">October</span></div>
+            <div class="months"><h2 class="h2">November: </h2> <span class="ap">November</span></div>
+           <div class="months"><h2 class="h2">December: </h2> <span class="jan">December</span></div>
+        </div>
+        <div>
+            <h2 class="h2">Total</h2><span class="total">total</span>
+            <h2 class="h2">weekly output: </h2> <span class="week">week</span>
+            <h2 class="h2">yearly output</h2> <span class="year">year</span>
+        </div>
     </div>
+    
 
-    <div>
-        <h2 class="h2">Total</h2><span class="total">total</span>
-        <h2 class="h2">weekly output: </h2> <span class="week">week</span>
-        <h2 class="h2">yearly output</h2> <span class="year">year</span>
-    </div>
+
    </div>
 <script src="index.js" charset="UTF-8"></script>
 </body>
