--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
            <div class="months"><h2 class="h2">December: </h2> <span class="jan">December</span></div>
         </div>
         <div>
-            <h2 class="h2">Total</h2><span class="total">total</span>
-            <h2 class="h2">weekly output: </h2> <span class="week">week</span>
-            <h2 class="h2">yearly output</h2> <span class="year">year</span>
+            <div> <h2 class="h2">Total</h2><span class="total">total</span></div>
+            <div><h2 class="h2">weekly output: </h2> <span class="week">week</span></div>
+            <div><h2 class="h2">yearly output</h2> <span class="year">year</span></div>
         </div>
     </div>
     
